[gd_scene format=3 uid="uid://bqcxhobdkpg2y"]

[ext_resource type="Script" uid="uid://pf4bnfykybbg" path="res://scenes/manananggal.gd" id="1_ncg74"]
[ext_resource type="Texture2D" uid="uid://dcgxq7lbt2ehh" path="res://sprites/default/boss/idle_1.png" id="2_xjj0r"]
[ext_resource type="Script" uid="uid://c157vk1c6n21g" path="res://scenes/hitboxmanananggal.gd" id="3_ncg74"]
[ext_resource type="Texture2D" uid="uid://uehbyaf27lhr" path="res://sprites/default/boss/landed_1.png" id="3_pbhxj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mfsj4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xjj0r")
}],
"loop": true,
"name": &"idle_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_pbhxj")
}],
"loop": false,
"name": &"landed_1",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ra3w"]
radius = 15.0
height = 70.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7p1mj"]
radius = 18.0
height = 72.0

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 382.00525

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 16.0
height = 68.0

[node name="enemy" type="CharacterBody2D" unique_id=1381143129 groups=["enemy"]]
collision_layer = 16
collision_mask = 33
script = ExtResource("1_ncg74")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=2080500970]
position = Vector2(1.9999995, -2.9999962)
scale = Vector2(0.34046963, 0.34046966)
sprite_frames = SubResource("SpriteFrames_mfsj4")
animation = &"idle_1"

[node name="WandererTimer" type="Timer" parent="." unique_id=498703974]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." unique_id=1938881351]
position = Vector2(6, -5)
shape = SubResource("CapsuleShape2D_4ra3w")

[node name="Area2D" type="Area2D" parent="." unique_id=474147839 groups=["enemy"]]
position = Vector2(7, -6)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=47380270]
shape = SubResource("CapsuleShape2D_7p1mj")

[node name="DamageTimer" type="Timer" parent="." unique_id=1703589951]
one_shot = true

[node name="DetectionArea" type="Area2D" parent="." unique_id=837413452]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" unique_id=882025899]
position = Vector2(5, 0)
shape = SubResource("CircleShape2D_md0e3")

[node name="Hurtbox" type="Area2D" parent="." unique_id=155464236 groups=["enemy_hurtbox"]]
script = ExtResource("3_ncg74")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" unique_id=1554255047]
position = Vector2(7, -7)
shape = SubResource("CapsuleShape2D_md0e3")

[connection signal="timeout" from="WandererTimer" to="." method="_on_wanderer_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="timeout" from="DamageTimer" to="Area2D" method="_on_damage_timer_timeout"]
[connection signal="area_entered" from="DetectionArea" to="Area2D" method="_on_detection_area_area_entered"]
